--- a/src/style.scss
+++ b/src/style.scss
@@ -7,11 +7,13 @@ table {
     margin: 2rem auto;
   }
   table th, table td {
-    border: 1px solid #ddd;
+    border: 2px solid black;
+    border-bottom: 1px solid black;
     text-align: center;
     padding: 15px;
     width: 50%;
   }
-  h1{
-    text-align:center;
-  }
+  td {
+    text-align: center;
+    border: 2px solid black;
+    }
